# openia_assistant

./: .env.example  Dockefile  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml
